README update 02.06.2025